experimento/k8s/recomendations-command-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recomendations-command-deployment
  labels:
    app: recomendations-command
spec:
  replicas: 3
  selector:
    matchLabels:
      app: recomendations-command
  template:
    metadata:
      labels:
        app: recomendations-command
    spec:
      containers:
      - name: recomendations-command
        image: gcr.io/xenon-broker-309217/recomendations-command:latest
        ports:
        - containerPort: 8080
