experimento/k8s/recomendations-query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recomendations-query-deployment
  labels:
    app: recomendations-query
spec:
  replicas: 3
  selector:
    matchLabels:
      app: recomendations-query
  template:
    metadata:
      labels:
        app: recomendations-query
    spec:
      containers:
      - name: recomendations-query
        image: gcr.io/xenon-broker-309217/recomendations-query:latest
        ports:
        - containerPort: 8080
