experimento/k8s/recomendations-query-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recomendations-query-service
spec:
  type: LoadBalancer
  selector:
    app: recomendations-query
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
