experimento/k8s/recommendations-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recommendations-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-intercept-errors: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "1000m" 
spec:
  ingressClassName: "nginx"
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /command(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: recomendations-command-service
            port:
              number: 80
      - path: /query(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: recomendations-query-service
            port:
              number: 80
